# advent-of-code-2022

./: .gitpod.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  readme-stars.yml
src/: lib.rs  main.rs  sparse_table.rs
