[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["soupmatt"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
lazy_static = "1.4.0"
regex = "1"
indoc = "1.0.7"
pathfinding = "4.0.0"
lyn = "0.1.0"
itertools = "0.10.5"
num-integer = "0.1.45"
num-traits = "0.2.15"
num-iter = "0.1.43"
